{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 15,
  "lineage": "6f44e092-78f7-45e6-a4f8-cadfb72e98a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshahid_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:internet-gateway/igw-087114e4846d38ff7",
            "id": "igw-087114e4846d38ff7",
            "owner_id": "554785859741",
            "tags": {
              "Name": "devopsshahid-igw"
            },
            "tags_all": {
              "Name": "devopsshahid-igw"
            },
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "dependencies": [
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshahid_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:route-table/rtb-0c69a28573a51c65e",
            "id": "rtb-0c69a28573a51c65e",
            "owner_id": "554785859741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087114e4846d38ff7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshahid-route-table"
            },
            "tags_all": {
              "Name": "devopsshahid-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devopsshahid_igw",
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e620c9fb44110ee",
            "route_table_id": "rtb-0c69a28573a51c65e",
            "subnet_id": "subnet-03dbfe16dc46b13c5"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshahid_igw",
            "aws_route_table.devopsshahid_route_table",
            "aws_subnet.devopsshahid_subnet",
            "aws_vpc.devopsshahid_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0421cda7815f81258",
            "route_table_id": "rtb-0c69a28573a51c65e",
            "subnet_id": "subnet-096f62e02aed24676"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshahid_igw",
            "aws_route_table.devopsshahid_route_table",
            "aws_subnet.devopsshahid_subnet",
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshahid_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:security-group/sg-00af0ff60f734dd2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00af0ff60f734dd2e",
            "ingress": [],
            "name": "terraform-20241128153111872200000001",
            "name_prefix": "terraform-",
            "owner_id": "554785859741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshahid-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshahid-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshahid_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:security-group/sg-0d3f1d28c9091956e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3f1d28c9091956e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241128153111874200000002",
            "name_prefix": "terraform-",
            "owner_id": "554785859741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshahid-node-sg"
            },
            "tags_all": {
              "Name": "devopsshahid-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshahid_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:subnet/subnet-03dbfe16dc46b13c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dbfe16dc46b13c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "554785859741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsshahid-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshahid-subnet-0"
            },
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "dependencies": [
            "aws_vpc.devopsshahid_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:subnet/subnet-096f62e02aed24676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096f62e02aed24676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "554785859741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsshahid-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshahid-subnet-1"
            },
            "vpc_id": "vpc-04254f0808fd4da01"
          },
          "dependencies": [
            "aws_vpc.devopsshahid_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshahid_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:554785859741:vpc/vpc-04254f0808fd4da01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e401c426a76a427c",
            "default_route_table_id": "rtb-0982ca4ae1aa10982",
            "default_security_group_id": "sg-0be9b1cc5f5d94351",
            "dhcp_options_id": "dopt-0926ece014536cd6f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04254f0808fd4da01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0982ca4ae1aa10982",
            "owner_id": "554785859741",
            "tags": {
              "Name": "devopsshahid-vpc"
            },
            "tags_all": {
              "Name": "devopsshahid-vpc"
            }
          }
        }
      ]
    }
  ]
}